# mintaka

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sbt  docker-compose.yml  renju.md  rust-toolchain  rust-toolchain.toml
.cargo/: config.toml
.run/: Run mintaka_text_protocol.run.xml  Test mintaka.run.xml  arena.run.xml  dev_wasm.run.xml  format.run.xml  mintaka_text_protocol.run.xml  typecheck.run.xml
documents/: renju-test-set.md  renju.md  workarounds.md
mintaka/: Cargo.toml
mintaka/benches/: bench_endgame.rs  bench_memo.rs  bench_movegen.rs  bench_opening.rs  bench_search.rs  bench_vcf.rs  vcf_benches.rs
mintaka/examples/: vcf_search.rs  vcf_sequence.rs
mintaka/src/: aspiration_window.rs  batch_counter.rs  bitfield.rs  board.rs  board_io.rs  board_iter.rs  config.rs  formation.rs  game.rs  game_agent.rs  game_state.rs  history.rs  history_table.rs  launch.rs  lib.rs  lut_slice_pattern.rs  parameters.rs  params.rs  pattern.rs  principal_variation.rs  search.rs  search_endgame.rs  search_frame.rs  search_info.rs  search_limit.rs  search_minimal.rs  search_snap.rs  search_state.rs  slice.rs  slice_pattern.rs  state.rs  thread_data.rs  thread_pool.rs  thread_type.rs  time.rs  time_manager.rs  value.rs
mintaka/src/cache/: dummy_patch_cache.rs  dummy_pattern_cache.rs  hash_key.rs  hash_table.rs  lru_patch_cache.rs  lru_pattern_cache.rs  mod.rs  patch_cache.rs  pattern_cache.rs
mintaka/src/endgame/: accumulator.rs  mod.rs  vcf.rs  vcf_search.rs  vct.rs  vct_search.rs
mintaka/src/eval/: evaluator.rs  heuristic_cache.rs  heuristic_evaluator.rs  mod.rs  nnue_evaluator.rs  scores.rs
mintaka/src/eval/nn/: network_params.rs
mintaka/src/eval/nnue/: mod.rs
mintaka/src/memo/: abstract_transposition_table.rs  buffered_pattern_memo.rs  dummy_pattern_memo.rs  hash_key.rs  hashmap_slice_pattern_memo.rs  history_table.rs  lru_slice_pattern_memo.rs  memory_leak_pattern_memo.rs  mod.rs  slice_pattern_memo.rs  transposition_table.rs  tt_entry.rs  tt_slice_pattern_memo.rs  tt_sync_slice_pattern_memo.rs
mintaka/src/movegen/: mod.rs  move_generator.rs  move_list.rs  move_picker.rs  move_scores.rs  movegen_window.rs  neighbor_scores.rs  score_table.rs
mintaka/src/nnue/: mod.rs
mintaka/src/notation/: color.rs  direction.rs  forbidden_kind.rs  game_result.rs  history.rs  mod.rs  node.rs  pos.rs  rule.rs
mintaka/src/opening/: mod.rs  opening_agent.rs  opening_guide.rs  opening_kind.rs  opening_stage.rs  opening_utils.rs
mintaka/src/protocol/: command.rs  dummy_game_manager.rs  game_manager.rs  game_result.rs  message.rs  mod.rs  response.rs  results.rs  runtime_command.rs  solution.rs  timer.rs
mintaka/src/utils/: abstract_transposition_table.rs  batch_counter.rs  bitwise_utils.rs  lang_utils.rs  mod.rs  monotonic_clock.rs  serde.rs  str_utils.rs  thread.rs  time.rs  time_manager.rs  trait_utils.rs
mintaka/src/worker/: thread_data.rs
mintaka/tests/: codegen.rs  playground.rs  template.rs  test_board.rs  test_eval.rs  test_forbid.rs  test_forbid_complex.rs  test_game.rs  test_move_ordering.rs  test_movegen.rs  test_nested_forbid.rs  test_pattern.rs  test_performance.rs  test_playground.rs  test_result.rs  test_search.rs  test_size.rs  test_slice.rs  test_slice_pattern.rs  test_tablebase.rs  test_vcf.rs
mintaka_cli/: Cargo.toml
mintaka_engine/: Cargo.toml
mintaka_interface/: Cargo.toml  README.md  build.sh  build_amd64.sh
mintaka_interface/src/: command_line.rs  commandline_game_manager.rs  lib.rs  main.rs  message.rs  pbrain_game_manager.rs  piskvork.rs  piskvork_game_manager.rs  preference.rs  self_play.rs  stdio_utils.rs  text_protocol.rs
mintaka_pbrain/: Cargo.toml
mintaka_server/: .gitignore  Cargo.toml  README.md  max_config.example.toml  openapi.yaml
mintaka_server/src/: app_error.rs  app_state.rs  args.rs  lib.rs  main.rs  preference.rs  rest.rs  session.rs  stream_response_sender.rs  unbounded_response_sender.rs  websocket.rs
mintaka_server/tests/: playground.rs
mintaka_trainer/: Cargo.toml  README.md  arena.py  build_a.sh  build_b.sh  build_baseline.sh  build_target.sh  move_target.sh  optimize_params.py  reconcile_target.sh
mintaka_wasm/: Cargo.toml  README.md  types.d.ts  types_ts  union_types_ts
mintaka_wasm/src/: lib.rs  mintaka.rs  mintaka_bindings.rs  mintaka_worker.rs  notation.rs  rusty_renju.rs
mintaka_wasm_worker/: Cargo.toml
mintaka_webui/: .babelrc  .gitignore  Cargo.toml  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
project/: plugins.sbt
resrenju_engine/: Cargo.toml
rusty_renju/: Cargo.toml
rusty_renju/benches/: bench_forbidden_moves.rs  forbidden_move_benches.rs
rusty_renju/src/: bitfield.rs  board.rs  board_io.rs  board_iter.rs  board_utils.rs  game.rs  hash_key.rs  history.rs  legacy_slice_pattern.rs  lib.rs  lut_slice_pattern.rs  pattern.rs  pattern_index.rs  pattern_score.rs  score_table.rs  slice.rs  slice_pattern.rs  slice_pattern_count.rs  win_rate.rs
rusty_renju/src/memo/: abstract_transposition_table.rs  hash_key.rs  hash_table.rs  mod.rs  tt_slice_pattern_memo.rs
rusty_renju/src/movegen/: mod.rs  move_generator.rs  movegen_agent.rs  movegen_data.rs  movegen_window.rs
rusty_renju/src/notation/: color.rs  direction.rs  ffi.rs  mod.rs  pos.rs  rule.rs  score.rs  value.rs
rusty_renju/src/opening/: opening_agent.rs  opening_utils.rs
rusty_renju/src/utils/: byte_size.rs  empty.rs  lang.rs  lang_utils.rs  mod.rs  platform.rs  serde.rs  str_utils.rs  trait_utils.rs
rusty_renju/tests/: codegen.rs  template.rs  test_forbid.rs  test_movegen.rs  test_nested_forbid.rs  test_opening.rs  test_size.rs  test_slice.rs  test_slice_pattern.rs
rusty_renju_c/: Cargo.toml  rusty-renju.py
rusty_renju_image/: .gitignore  Cargo.toml
rusty_renju_image/src/: image_renderer.rs  lib.rs  renderer.rs  text.rs
rusty_renju_image/tests/: test_image.rs
rusty_renju_wasm/: Cargo.toml  types_ts  union_types_ts
rusty_renju_wasm/src/: lib.rs  rusty_renju.rs  rusty_renju_bindings.rs
(+320 files in other folders)
