[workspace]
members = [
    "rusty_renju",
    "rusty_renju_c",
    "rusty_renju_wasm",
    "rusty_renju_image",
    "mintaka",
    "mintaka_trainer",
    "mintaka_wasm",
    "mintaka_server",
    "mintaka_interface",
]
default-members = ["rusty_renju", "mintaka"]
resolver = "2"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"

[profile.bench]
inherits = "release"
codegen-units = 16
lto = "off"

[profile.perf]
inherits = "release"
debug = true
strip = "none"
