[package]
name = "mintaka"
version = "0.1.0-pre-alpha"
edition = "2024"

[features]
debug-statics = []
neural-eval = []
rayon = []
default = []

[dependencies]
rusty_renju = {path = "../rusty_renju" }
serde = { version = "1.0", features = ["derive"] }
rayon = "1.11.0"
typeshare = "1.0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
lz4 = "1.28"
[target.'cfg(feature = "rayon")'.dependencies]
rayon = "1.11"

typeshare = "1.0"

[dev-dependencies]
indoc = "2.0"
