[package]
name = "mintaka"
version = "0.1.0-pre-alpha"
edition = "2024"

[features]
serde = ["dep:serde", "rusty_renju/serde"]
typeshare = ["serde", "dep:typeshare", "rusty_renju/typeshare"]
compress-tt = ["dep:lz4"]
debug-statics = []
neural-eval = []
default = []

[dependencies]
rusty_renju = {path = "../rusty_renju" }
rayon = { version = "1.11", optional = true }

serde = { version = "1.0", features = ["derive"], optional = true }
typeshare = { version = "1.0", optional = true }

lz4 = { version = "1.28", optional = true }

[dev-dependencies]
indoc = "2.0"
