[package]
name = "mintaka_interface"
version = "0.9.0"
edition = "2024"

[features]
clap = ["dep:clap"]
text_protocol = ["clap"]
default = []

[[bin]]
name = "pbrain_mintaka"
path = "src/piskvork.rs"

[[bin]]
name = "mintaka_text_protocol"
path = "src/text_protocol.rs"
required-features = ["text_protocol"]

[dependencies]
rusty_renju = { path = "../rusty_renju" }
mintaka = { path = "../mintaka" }
clap = { version = "4.5", features = ["derive"], optional = true }
