[package]
name = "mintaka_interface"
version = "0.9.0"
edition = "2024"

[features]
clap = ["dep:clap"]
text-protocol = ["clap"]
rule-renju = []
rule-gomoku = []
default = ["rule-renju"]

[[bin]]
name = "pbrain-mintaka_renju-15"
path = "src/piskvork.rs"
required-features = ["rule-renju"]

[[bin]]
name = "pbrain-mintaka_freestyle-15"
path = "src/piskvork.rs"
required-features = ["rule-gomoku"]

[[bin]]
name = "mintaka_text_protocol_renju"
path = "src/text_protocol.rs"
required-features = ["text-protocol", "rule-renju"]

[[bin]]
name = "mintaka_text_protocol_gomoku"
path = "src/text_protocol.rs"
required-features = ["text-protocol", "rule-gomoku"]

[dependencies]
rusty_renju = { path = "../rusty_renju" }
mintaka = { path = "../mintaka" }
clap = { version = "4.5", features = ["derive"], optional = true }
