[package]
name = "mintaka_server"
version = "0.9.0"
edition = "2024"

[dependencies]
rusty_renju = { path = "../rusty_renju", features = ["serde"] }
mintaka = { path = "../mintaka", features = ["serde", "compress-tt"] }

typeshare = "1.0"

uuid = { version = "1.17", features = ["v4", "v7", "serde"] }
dashmap = "6.1"

num_cpus = "1.17"
core_affinity = "0.8.3"

futures-util = "0.3"
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tower-http = { version = "0.6", features = ["trace", "cors", "fs", "set-header"] }
tokio = { version = "1.45", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3.0"
clap = { version = "4.5", features = ["derive", "env"] }
toml = "0.9"

webbrowser = "1.0"
