[package]
name = "mintaka_wasm"
version = "0.1.0"
edition = "2024"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O3",
    "--enable-simd",
    "--enable-threads",
    "--enable-bulk-memory",
    "--enable-mutable-globals",
    "--enable-nontrapping-float-to-int",
]

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rusty_renju = { path = "../rusty_renju", features = ["serde"] }
mintaka = { path = "../mintaka", features = ["serde"] }

serde = "1.0"

wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

# .cargo/config.toml: --cfg getrandom_backend="wasm_js"
getrandom = { version = "0.3", features = ["wasm_js"] }
