[package]
name = "rusty_renju"
version = "1.0.0"
edition = "2024"

[features]
serde = ["dep:serde"]
default = []

[lib]
name = "rusty_renju"
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
rand = "0.9"

typeshare = "1.0"

[dev-dependencies]
indoc = "2.0"
