[package]
name = "rusty_renju"
version = "1.0.0"
edition = "2024"

[features]
serde = ["dep:serde"]
typeshare = ["dep:typeshare"]
default = []

[lib]
name = "rusty_renju"
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
typeshare = { version = "1.0", optional = true }

[dev-dependencies]
indoc = "2.0"
rand = "0.9"
