[package]
name = "rusty_renju"
version = "1.0.0"
edition = "2024"

[features]
serde = ["dep:serde", "dep:base64"]
typeshare = ["serde", "dep:typeshare"]
default = []

[lib]
name = "rusty_renju"
crate-type = ["rlib", "cdylib"]

[dependencies]
base64 = { version = "0.22", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
typeshare = { version = "1.0", optional = true }

[dev-dependencies]
indoc = "2.0"
rand = "0.9"
