[package]
name = "rusty_renju_wasm"
version = "0.1.0"
edition = "2024"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-Os",
    "--enable-simd",
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
]

[lib]
crate-type = ["cdylib"]

[features]
console_error_panic_hook = ["dep:console_error_panic_hook"]
default = []

[dependencies]
rusty_renju = { path = "../rusty_renju", features = ["serde"] }

serde = "1.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
